fixed alignment problems

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -28,7 +28,8 @@
 
 .entry-content,
 .entry-summary {
-	> .aligncenter {
+	> .aligncenter,
+	> .wp-block-image .aligncenter {
 		width: $default-width;
 	}
 }
